# img2LaTeX

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.web  Dockerfile.worker  Makefile  README.md  create_sample_images.py  docker-compose.yml  nginx.conf  pyproject.toml  start-dev.sh
apps/api/: alembic.ini  app.db  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  models.py  repository.py
apps/api/app/routers/: dataset.py  evaluate.py  history.py  infer.py  models.py  train.py
apps/api/app/services/: infer.py
apps/api/tests/: test_health.py  test_infer.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/components/: DatasetTable.tsx  GenerateButton.tsx  HistoryPanel.tsx  LaTeXViewer.tsx  Layout.tsx  SettingsModal.tsx  UploadZone.tsx
apps/web/src/pages/: Dataset.tsx  Evaluate.tsx  Home.tsx  Train.tsx
apps/web/tests/: basic.spec.ts
apps/worker/: celery_app.py
apps/worker/tasks/: train_lora.py
models/inference/: model_manager.py  unsloth_qwen.py
