[project]
name = "visionlatex-api"
version = "0.1.0"
description = "VisionLaTeX Studio API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "unsloth>=2024.1",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "xformers>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "ARG", "SIM", "TCH", "Q"]
ignore = ["E501", "B008", "C901"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "node_modules",
    "dist",
    "build",
]

[tool.black]
target-version = ['py311']
line-length = 88 